[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
description = "A short description of my project"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Clarence Subia", email = "subiaclarence96@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
  "argparse",
  "pan-os-python",
  "pyyaml",
  "xmltodict",
  "ipaddress"
]

[tool.setuptools.packages.find]
where = ["src"]
